# -Ghostcoin

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  WHITEPAPER.md  cat .gitignore  fly.seed2.toml  fly.toml  ghostcoin.wallet  ghostcoin_blocks.json  ghostcoin_chain.json  ghostcoin_governance.json  ghostcoin_history.json  ghostcoin_mempool.json  portfolio_PC1746d50975dff0.json  portfolio_PC1cdf99be1ecb57.json  rust-toolchain.toml  txhistory_1e49b3bac18fdd9d.json  txhistory_PC11e49b3bac18fdd9d9.json  txhistory_PC1746d50975dff064a0.json  txhistory_PC1cdf99be1ecb57c28c.json  txhistory_cdf99be1ecb57c28.json  wallet_1e49b3bac18fdd9d.ghst  wallet_PC1746d50975dff064a0.ghst  wallet_cdf99be1ecb57c28.ghst
docs/whitepaper/: GhostCoin_Whitepaper_v0.1.docx
scripts/: enable-powershell-utf8.ps1
src/: anti_analysis.rs  atomic_swap.rs  block.rs  blockchain.rs  chain_state.rs  cli.rs  confidential.rs  config.rs  consensus.rs  dandelion.rs  explorer.rs  fees.rs  governance.rs  instance_lock.rs  logger.rs  main.rs  masternode.rs  mempool.rs  mimblewimble.rs  miner.rs  network.rs  node.rs  portfolio.rs  quantum.rs  ring_signature.rs  seed.rs  server_mode.rs  staking.rs  stealth.rs  storage.rs  sync.rs  tests.rs  tor_network.rs  tx_store.rs  use cli_clipboard  viewkey.rs  wallet.rs  web_server.rs  web_server.rs rust  zkproof.rs
src/1️⃣ src/: block.rs
src/2️⃣ src/: blockchain.rs
src/3️⃣ src/: stealth.rs
src/4️⃣ src/: confidential.rs
src/5️⃣ src/: ring_signature.rs
src/6️⃣ src/: zkproof.rs
src/7️⃣ src/: main.rs
src/Dockerfile/: .gitignore  (+1 more)
static/: app.html
(+2 files in other folders)
