[package]
name = "privacy_chain"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10"
rand = "0.8"
chrono = "0.4"
curve25519-dalek = "4"
bellman = "0.14"
bls12_381 = "0.8"
ff = "0.13"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
cli-clipboard = "0.4.0"
